...
    func onAppear() {}

    private func presentButtons() {
        locationManager.stopTrackingLocation()
        state = .actionButton(
            ButtonModel(
                title: .text("Start new session"),
                action: { [weak self] in
                    self?.askForPermissionsIfNeededAndStartNewSession()
                },
                isEnabled: true
            )
        )
...
